--- a/src/main/resources/pages/index.html
+++ b/src/main/resources/pages/index.html
@@ -1,219 +1,281 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Dionz | Premium Watches</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <meta charset="UTF-8" />
+  <title>Dionz</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <style>
-        :root {
-            --gold: #cc9b06;
-            --black: #000;
-            --white: #fff;
-        }
+  <!-- Bootstrap CDN -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" defer></script>
 
-        body {
-            padding-top: 70px;
-            background-color: var(--white);
-            font-family: 'Segoe UI', sans-serif;
-        }
+  <style>
+    :root {
+      --gold: #edcd84;
+      --gold-light: #f8e7b3;
+      --black: #000;
+      --white: #fff;
+    }
 
-        /* Navbar Styling */
-        .navbar {
-            background-color: var(--black);
-            border-bottom: 2px solid var(--gold);
-        }
+    body {
+      margin: 0;
+      font-family: 'Segoe UI', sans-serif;
+      background-color: var(--white);
+    }
 
-        .navbar-brand {
-            font-weight: bold;
-        }
+    .navbar {
+      background-color: var(--black);
+      padding: 1rem 1.2rem;
+      position: relative;
+      overflow: hidden;
+      z-index: 10;
+    }
 
-        .text-gold {
-            color: var(--gold) !important;
-        }
+    .navbar::after {
+      content: "";
+      position: absolute;
+      top: -40px;
+      right: -60px;
+      width: 300px;
+      height: 300px;
+      background:
+              linear-gradient(135deg, var(--gold) 30%, transparent 30%),
+              linear-gradient(145deg, transparent 60%, var(--gold) 60%),
+              linear-gradient(120deg, var(--gold) 15%, transparent 15%);
+      background-repeat: no-repeat;
+      background-size: 140px 140px, 200px 200px, 100px 100px;
+      opacity: 0.2;
+      transform: rotate(10deg);
+      z-index: 0;
+      pointer-events: none;
+    }
 
-        .btn-outline-gold {
-            border: 2px solid var(--gold);
-            color: var(--gold);
-            transition: 0.3s;
-        }
+    .navbar::before {
+      content: "";
+      position: absolute;
+      bottom: -50px;
+      left: -60px;
+      width: 250px;
+      height: 250px;
+      background:
+              linear-gradient(150deg, transparent 60%, var(--gold) 60%),
+              linear-gradient(135deg, var(--gold) 25%, transparent 25%);
+      background-repeat: no-repeat;
+      background-size: 130px 130px, 100px 100px;
+      opacity: 0.15;
+      transform: rotate(-10deg);
+      z-index: 0;
+      pointer-events: none;
+    }
 
-        .btn-outline-gold:hover {
-            background-color: var(--gold);
-            color: var(--black);
-        }
+    .navbar-brand img {
+      height: 45px;
+      z-index: 2;
+      position: relative;
+    }
 
-        .navbar .nav-link:hover,
-        .navbar .nav-link.active {
-            color: var(--gold) !important;
-        }
+    .nav-link {
+      color: var(--white) !important;
+      font-weight: 400;
+      font-size: 0.95rem;
+      transition: 0.3s;
+      z-index: 2;
+    }
 
-        .dropdown-menu {
-            border: 1px solid var(--gold);
-        }
+    .nav-link:hover {
+      color: var(--gold) !important;
+    }
 
-        .dropdown-item:hover {
-            background-color: var(--gold);
-            color: var(--black);
-        }
+    .phone {
+      color: var(--gold);
+      font-size: 0.95rem;
+      display: flex;
+      align-items: center;
+      gap: 6px;
+      z-index: 2;
+    }
 
-        /* Product card basic look */
-        .card {
-            border: 1px solid #ddd;
-            border-radius: 10px;
-            padding: 10px;
-            margin-bottom: 20px;
-            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-        }
+    .phone img {
+      width: 18px;
+      height: 18px;
+      object-fit: contain;
+    }
 
-        .card:hover {
-            border-color: var(--gold);
-        }
+    .whatsapp-link {
+      color: var(--gold);
+      text-decoration: none;
+      font-weight: 400;
+      font-size: 0.9rem;
+      padding: 6px 16px;
+      border: 2px solid var(--gold);
+      border-radius: 20px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      transition: 0.3s;
+      z-index: 2;
+    }
 
-        .card-title {
-            font-weight: 600;
-        }
-    </style>
+    .whatsapp-link:hover {
+      background-color: var(--gold);
+      color: var(--black);
+    }
+
+    .dropdown-menu {
+      background-color: var(--white);
+      border: none;
+      margin-top: 0.4rem;
+      box-shadow: 0 4px 16px rgba(0, 0, 0, 0.25);
+      animation: fadeSlide 0.2s ease;
+      z-index: 9999;
+    }
+
+    .dropdown-menu .dropdown-item {
+      color: var(--black);
+      font-weight: 400;
+    }
+
+    .dropdown-menu .dropdown-item:hover {
+      background-color: var(--gold-light);
+      color: var(--black);
+    }
+
+    @keyframes fadeSlide {
+      0% {
+        opacity: 0;
+        transform: translateY(-5px);
+      }
+      100% {
+        opacity: 1;
+        transform: translateY(0);
+      }
+    }
+
+    .search-bar {
+      position: relative;
+      z-index: 1;
+    }
+
+    .search-bar input {
+      width: 500px;
+      max-width: 100%;
+      padding: 0.4rem 1rem;
+      border-radius: 20px;
+      border: 1.5px solid var(--gold);
+      font-size: 0.9rem;
+      color: var(--black);
+      outline: none;
+      transition: border-color 0.3s;
+    }
+
+    .search-bar input::placeholder {
+      color: #999;
+    }
+
+    .search-bar input:focus {
+      border-color: var(--gold);
+      box-shadow: 0 0 8px var(--gold);
+    }
+
+    .navbar-nav {
+      gap: 1.5rem;
+    }
+
+    @media (max-width: 991px) {
+      .navbar {
+        padding: 0.6rem 1rem;
+      }
+
+      .navbar-nav,
+      .whatsapp-link {
+        display: none !important;
+      }
+
+      .top-row {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+      }
+
+      .search-bar {
+        margin-top: 0.3rem;
+        position: relative;
+        z-index: 1;
+      }
+
+      .search-bar input {
+        width: 100%;
+      }
+    }
+  </style>
 </head>
-
 <body>
 
-<!-- ✅ Navbar -->
-<nav class="navbar navbar-expand-lg navbar-dark fixed-top">
-    <div class="container-fluid">
-        <a class="navbar-brand d-flex align-items-center" href="#" onclick="loadContent('dashboard')">
-            <img src="../assets/logo/Transparent%20W-2.png" alt="Dionz Logo" height="70" class="me-2">
+<!-- ✅ Navigation -->
+<nav class="navbar navbar-expand-lg">
+  <div class="container-fluid">
+
+    <!-- Mobile & Tablet View -->
+    <div class="top-row w-100 d-lg-none mb-2">
+      <a class="navbar-brand" href="#">
+        <img src="../assets/logo/Transparent%20W-2.png" alt="Dionz Logo" />
+      </a>
+
+      <div class="phone d-flex align-items-center">
+        <img src="../assets/imgs/whatsapp.png" alt="WhatsApp Icon" />
+        <span>+94 76 714 9543</span>
+      </div>
+    </div>
+
+    <!-- Desktop View -->
+    <div class="d-none d-lg-flex w-100 align-items-center justify-content-between">
+      <!-- Left: Logo + Navigation -->
+      <div class="d-flex align-items-center gap-4">
+        <a class="navbar-brand" href="#">
+          <img src="../assets/logo/Transparent%20W-2.png" alt="Dionz Logo" />
         </a>
 
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-
-        <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                <li class="nav-item">
-                    <a class="nav-link" href="#" onclick="loadContent('dashboard')">Home</a>
-                </li>
-
-                <!-- Categories -->
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">
-                        Categories
-                    </a>
-                    <ul class="dropdown-menu">
-                        <li><a class="dropdown-item" href="#" onclick="loadContent('products-men')">Men</a></li>
-                        <li><a class="dropdown-item" href="#" onclick="loadContent('products-women')">Women</a></li>
-                        <li><a class="dropdown-item" href="#" onclick="loadContent('products-unisex')">Unisex</a></li>
-                    </ul>
-                </li>
-
-                <!-- Quality -->
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">
-                        Quality
-                    </a>
-                    <ul class="dropdown-menu">
-                        <li><a class="dropdown-item" href="#">Luxury</a></li>
-                        <li><a class="dropdown-item" href="#">Best</a></li>
-                        <li><a class="dropdown-item" href="#">Good</a></li>
-                    </ul>
-                </li>
-
-                <!-- Admin Panel -->
-                <li class="nav-item">
-                    <a class="nav-link text-warning" href="/admin-panel?key=your-secret-key">Admin</a>
-                </li>
-            </ul>
-
-            <!-- WhatsApp CTA -->
-            <a href="https://wa.me/94771234567" target="_blank" class="btn btn-outline-gold">
-                WhatsApp
+        <ul class="navbar-nav d-flex align-items-center gap-3 mb-0">
+          <li class="nav-item">
+            <a class="nav-link" href="#">Home</a>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="categoriesDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              Categories
             </a>
+<!--            <ul class="dropdown-menu" aria-labelledby="categoriesDropdown">-->
+<!--              <li><a class="dropdown-item" href="#">Mens</a></li>-->
+<!--              <li><a class="dropdown-item" href="#">Womens</a></li>-->
+<!--              <li><a class="dropdown-item" href="#">Bundle</a></li>-->
+<!--              <li><a class="dropdown-item" href="#">Couple</a></li>-->
+<!--              <li><a class="dropdown-item" href="#">Accessories</a></li>-->
+<!--            </ul>-->
+          </li>
+        </ul>
+      </div>
+
+      <!-- Right: Search + Phone + WhatsApp -->
+      <div class="d-flex align-items-center gap-3">
+        <div class="search-bar">
+          <input type="text" placeholder="search watches..." />
         </div>
+
+        <div class="phone d-flex align-items-center">
+          <img src="../assets/imgs/whatsapp.png" alt="WhatsApp Icon" />
+          <span>+94 76 714 9543</span>
+        </div>
+
+        <a class="whatsapp-link" href="https://wa.me/94767149543" target="_blank">WhatsApp</a>
+      </div>
     </div>
+
+    <!-- Mobile Search Bar -->
+    <div class="search-bar mt-2 mt-lg-0 w-100 w-lg-auto d-lg-none">
+      <input type="text" placeholder="Search watches..." />
+    </div>
+
+  </div>
 </nav>
-
-<!-- ✅ Content Area -->
-<div class="container mt-4" id="main-content">
-    <!-- Default View -->
-    <div id="dashboard-view">
-        <h2 class="text-center mb-4">Welcome to Dionz Dashboard</h2>
-        <p class="text-center">Explore our latest collections and premium watch styles for Men, Women, and Unisex.</p>
-    </div>
-</div>
-
-<!-- ✅ Bootstrap JS -->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-
-<!-- ✅ JS for Dynamic Content Switching -->
-<script>
-    function loadContent(view) {
-        const content = document.getElementById('main-content');
-
-        switch(view) {
-            case 'dashboard':
-                content.innerHTML = `
-          <div id="dashboard-view">
-            <h2 class="text-center mb-4">Welcome to Dionz Dashboard</h2>
-            <p class="text-center">Explore our latest collections and premium watch styles for Men, Women, and Unisex.</p>
-          </div>`;
-                break;
-
-            case 'products-men':
-                content.innerHTML = `
-          <h2 class="mb-3">Men's Watches</h2>
-          <div class="row">
-            <div class="col-md-4">
-              <div class="card">
-                <div class="card-body">
-                  <h5 class="card-title">Men's Watch 1</h5>
-                  <p class="card-text">Elegant black & gold watch.</p>
-                  <a href="https://wa.me/94771234567?text=I'm%20interested%20in%20Men's%20Watch%201" class="btn btn-outline-gold w-100" target="_blank">Buy Now</a>
-                </div>
-              </div>
-            </div>
-            <!-- Add more watch cards -->
-          </div>`;
-                break;
-
-            case 'products-women':
-                content.innerHTML = `
-          <h2 class="mb-3">Women's Watches</h2>
-          <div class="row">
-            <div class="col-md-4">
-              <div class="card">
-                <div class="card-body">
-                  <h5 class="card-title">Women's Watch 1</h5>
-                  <p class="card-text">Rose gold elegance.</p>
-                  <a href="https://wa.me/94771234567?text=I'm%20interested%20in%20Women's%20Watch%201" class="btn btn-outline-gold w-100" target="_blank">Buy Now</a>
-                </div>
-              </div>
-            </div>
-          </div>`;
-                break;
-
-            case 'products-unisex':
-                content.innerHTML = `
-          <h2 class="mb-3">Unisex Watches</h2>
-          <div class="row">
-            <div class="col-md-4">
-              <div class="card">
-                <div class="card-body">
-                  <h5 class="card-title">Unisex Watch 1</h5>
-                  <p class="card-text">Classic design for all.</p>
-                  <a href="https://wa.me/94771234567?text=I'm%20interested%20in%20Unisex%20Watch%201" class="btn btn-outline-gold w-100" target="_blank">Buy Now</a>
-                </div>
-              </div>
-            </div>
-          </div>`;
-                break;
-
-            default:
-                content.innerHTML = `<p class="text-danger">View not found.</p>`;
-        }
-    }
-</script>
 
 </body>
 </html>
