--- a/index.html
+++ b/index.html
@@ -287,11 +287,11 @@
     <!-- Mobile & Tablet View -->
     <div class="top-row w-100 d-lg-none mb-2">
       <a class="navbar-brand" href="#">
-        <img src="../assets/logo/Transparent%20W-2.png" alt="Dionz Logo" />
+        <img src="src/main/resources/assets/logo/Transparent%20W-2.png" alt="Dionz Logo" />
       </a>
 
       <div class="phone d-flex align-items-center">
-        <img src="../assets/imgs/whatsapp.png" alt="WhatsApp Icon" />
+        <img src="src/main/resources/assets/imgs/whatsapp.png" alt="WhatsApp Icon" />
         <span>+94 76 714 9543</span>
       </div>
     </div>
@@ -301,7 +301,7 @@
       <!-- Left: Logo + Navigation -->
       <div class="d-flex align-items-center gap-4">
         <a class="navbar-brand" href="#">
-          <img src="../assets/logo/Transparent%20W-2.png" alt="Dionz Logo" />
+          <img src="src/main/resources/assets/logo/Transparent%20W-2.png" alt="Dionz Logo" />
         </a>
 
         <ul class="navbar-nav d-flex align-items-center gap-3 mb-0">
@@ -330,7 +330,7 @@
         </div>
 
         <div class="phone d-flex align-items-center">
-          <img src="../assets/imgs/whatsapp.png" alt="WhatsApp Icon" />
+          <img src="src/main/resources/assets/imgs/whatsapp.png" alt="WhatsApp Icon" />
           <span>+94 76 714 9543</span>
         </div>
 
