--- a/index.html
+++ b/index.html
@@ -351,7 +351,7 @@
 
 <script>
   window.addEventListener("DOMContentLoaded", () => {
-    fetch("dashboard.html")
+    fetch("pages/dashboard.html")
             .then(response => response.text())
             .then(html => {
               document.getElementById("dynamicContent").innerHTML = html;
