--- a/src/main/resources/pages/dashboard.html
+++ b/src/main/resources/pages/dashboard.html
@@ -161,7 +161,7 @@
 
   <a href="item-details.html?id=1" class="card-link">
     <div class="card">
-      <img src="../assets/watches/1/watch 1 - 1.webp" alt="Watch">
+      <img src="src/main/resources/assets/watches/1/watch 1 - 1.webp" alt="Watch">
       <h4>Binbond 's Casual Blue Skeleton Quartz Watch with Date Indicator, High Quality 30m, Lightweight Metal Band for Teens & Adults - Perfect for School, Sports, Holidays, Holiday Gift, Youthful Style...</h4>
       <div class="price">
         <span class="currency">LKR</span>
