--- a/src/main/resources/pages/dashboard.html
+++ b/src/main/resources/pages/dashboard.html
@@ -173,7 +173,8 @@
 
   <a href="item-details.html?id=2" class="card-link">
     <div class="card">
-      <img src="../assets/watches/1/watch%201%20-%201.webp" alt="Women's Classic Watch">
+      <img src="src/main/resources/assets/watches/1/watch 1 - 1.webp
+" alt="Women's Classic Watch">
       <h4>Women's Classic Watch</h4>
       <div class="price">
         <span class="currency">LKR</span>
