--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
   <meta charset="UTF-8" />
   <title>Dionz</title>
+
+  <link rel="icon" href="src/main/resources/assets/logo/W.png" type="image/x-icon">
+
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
   <!-- Bootstrap CDN -->
