--- a/src/main/resources/pages/dashboard.html
+++ b/src/main/resources/pages/dashboard.html
@@ -29,6 +29,8 @@
     /* Categories Section */
     .categories-section {
       padding: 1rem 1.5rem;
+      background-color: #edcd84;
+
     }
 
     .categories-wrapper {
