--- a/src/main/resources/pages/dashboard.html
+++ b/src/main/resources/pages/dashboard.html
@@ -240,7 +240,7 @@
 
 <!-- Products Grid -->
 <div class="products-grid">
-  <a href="item-details.html?id=1" class="card-link">
+  <a href="src/main/resources/pages/item-details.html?id=1" class="card-link">
     <div class="card">
       <img src="src/main/resources/assets/watches/1/watch 1 - 1.webp" alt="Watch">
       <h4>Binbond Casual Blue Skeleton Quartz Watch - Youthful Style</h4>
