--- a/src/main/resources/pages/item-details.html
+++ b/src/main/resources/pages/item-details.html
@@ -29,6 +29,15 @@
             75% { transform: translateX(-3px); }
             100% { transform: translateX(0); }
         }
+
+        /* Make back button bigger on mobile */
+        @media (max-width: 600px) {
+            .back-button {
+                width: 70px;
+                height: 70px;
+                padding: 10px;
+            }
+        }
     </style>
 </head>
 <body>
