--- a/src/main/resources/pages/item-details.html
+++ b/src/main/resources/pages/item-details.html
@@ -30,12 +30,12 @@
             100% { transform: translateX(0); }
         }
 
-        /* Make back button bigger on mobile */
+        /* Media query for mobile view */
         @media (max-width: 600px) {
             .back-button {
-                width: 70px;
-                height: 70px;
-                padding: 10px;
+                width: 150px;  /* Increase width */
+                height: 150px; /* Increase height */
+                padding: 10px; /* Adjust padding */
             }
         }
     </style>
