--- a/src/main/resources/pages/item-details.html
+++ b/src/main/resources/pages/item-details.html
@@ -9,34 +9,17 @@
             background-color: #edcd84;
             border-radius: 50%;
             padding: 7px;
-            top: 20px;
-            left: 20px;
+            top: 30px;
+            left: 30px;
             width: 30px;
             height: 30px;
             cursor: pointer;
-            transition: background-color 0.3s ease;
+            box-shadow: 0 0 15px 5px rgba(0, 0, 0, 0.3); /* Gold glow */
+            transition: box-shadow 0.3s ease;
         }
 
         .back-button:hover {
-            background-color: #c2a563;
-            animation: shake 0.4s ease-in-out;
-        }
-
-        @keyframes shake {
-            0% { transform: translateX(0); }
-            25% { transform: translateX(-3px); }
-            50% { transform: translateX(3px); }
-            75% { transform: translateX(-3px); }
-            100% { transform: translateX(0); }
-        }
-
-        /* Media query for mobile view */
-        @media (max-width: 600px) {
-            .back-button {
-                width: 150px;  /* Increase width */
-                height: 150px; /* Increase height */
-                padding: 10px; /* Adjust padding */
-            }
+            box-shadow: 0 0 15px 10px rgba(194, 165, 99, 0.8); /* Brighter glow on hover */
         }
     </style>
 </head>
