--- a/src/main/resources/pages/dashboard.html
+++ b/src/main/resources/pages/dashboard.html
@@ -240,7 +240,7 @@
 
 <!-- Products Grid -->
 <div class="products-grid">
-  <a href="src/main/resources/pages/item-details.html?id=1" class="card-link">
+  <a href="src/main/resources/pages/watches/Watch-1.html?id=1" class="card-link">
     <div class="card">
       <img src="src/main/resources/assets/watches/1/watch 1 - 1.webp" alt="Watch">
       <h4>Binbond Casual Blue Skeleton Quartz Watch - Youthful Style</h4>
@@ -252,7 +252,7 @@
     </div>
   </a>
 
-  <a href="item-details.html?id=2" class="card-link">
+  <a href="watches/Watch-1.html?id=2" class="card-link">
     <div class="card">
       <img src="src/main/resources/assets/watches/1/watch 1 - 1.webp" alt="Women's Classic Watch">
       <h4>Women's Classic Watch</h4>
@@ -264,7 +264,7 @@
     </div>
   </a>
 
-  <a href="item-details.html?id=3" class="card-link">
+  <a href="watches/Watch-1.html?id=3" class="card-link">
     <div class="card">
       <img src="assets/items/item3.jpg" alt="Bundle Offer (Couple)">
       <h4>Bundle Offer (Couple)</h4>
@@ -276,7 +276,7 @@
     </div>
   </a>
 
-  <a href="item-details.html?id=4" class="card-link">
+  <a href="watches/Watch-1.html?id=4" class="card-link">
     <div class="card">
       <img src="assets/items/item4.jpg" alt="Men's Black Steel">
       <h4>Men's Black Steel</h4>
@@ -288,7 +288,7 @@
     </div>
   </a>
 
-  <a href="item-details.html?id=5" class="card-link">
+  <a href="watches/Watch-1.html?id=5" class="card-link">
     <div class="card">
       <img src="assets/items/item5.jpg" alt="Women's Gold Rose">
       <h4>Women's Gold Rose</h4>
