--- a/src/main/resources/pages/watches/Watch-1.html
+++ b/src/main/resources/pages/watches/Watch-1.html
@@ -304,17 +304,17 @@
 
     <!-- Left thumbnails -->
     <div class="thumbs" id="thumbs">
-        <img src="https://m.media-amazon.com/images/I/71t5LZ8Y8fL._UL1500_.jpg" alt="Watch 1" class="active" />
-        <img src="https://m.media-amazon.com/images/I/71nlElhhUgL._UL1500_.jpg" alt="Watch 2" />
-        <img src="https://m.media-amazon.com/images/I/71V-x6QLvDL._UL1500_.jpg" alt="Watch 3" />
-        <img src="https://m.media-amazon.com/images/I/71cvwD2dHGL._UL1500_.jpg" alt="Watch 4" />
-        <img src="https://m.media-amazon.com/images/I/61mMJO6w6GL._UL1500_.jpg" alt="Watch 5" />
+        <img src="../../assets/watches/1/watch 1 - 1.webp" alt="Watch 1" class="active" />
+        <img src="../../assets/watches/1/test.jpeg" alt="Watch 2" />
+        <img src="../../assets/watches/1/watch 1 - 1.webp" alt="Watch 3" />
+        <img src="../../assets/watches/1/watch 1 - 1.webp" alt="Watch 4" />
+        <img src="../../assets/watches/1/watch 1 - 1.webp" alt="Watch 5" />
     </div>
 
     <!-- Main Image -->
     <div>
         <div style="position: relative;">
-            <img id="mainImage" src="https://m.media-amazon.com/images/I/71t5LZ8Y8fL._UL1500_.jpg" alt="Main Watch" class="main-image" />
+            <img id="mainImage" src="../../assets/watches/1/watch 1 - 1.webp" alt="Main Watch" class="main-image" />
 
             <!-- Left Arrow -->
             <button id="prevBtn" style="position: absolute; top: 50%; left: 0; transform: translateY(-50%); background: rgba(0,0,0,0.5); color: white; border: none; font-size: 24px; padding: 10px; cursor: pointer; border-top-right-radius: 5px; border-bottom-right-radius: 5px;">‹</button>
@@ -342,19 +342,16 @@
 
         <div class="colors" id="colors">
             <div class="color-option selected" tabindex="0" aria-label="White Steel Black Surface" role="button">
-                <img src="https://m.media-amazon.com/images/I/71V-x6QLvDL._UL1500_.jpg" alt="White Steel Black Surface" />
+                <img src="../../assets/watches/1/watch 1 - 1.webp" alt="Red" />
             </div>
             <div class="color-option" tabindex="0" aria-label="Blue Steel Blue Surface" role="button">
-                <img src="https://m.media-amazon.com/images/I/71t5LZ8Y8fL._UL1500_.jpg" alt="Blue Steel Blue Surface" />
+                <img src="https://m.media-amazon.com/images/I/71t5LZ8Y8fL._UL1500_.jpg" alt="Blue" />
             </div>
             <div class="color-option" tabindex="0" aria-label="Golden strap and black dial" role="button">
-                <img src="https://m.media-amazon.com/images/I/71nlElhhUgL._UL1500_.jpg" alt="Golden strap and black dial" />
+                <img src="../../assets/watches/1/test.jpeg" alt="Gold" />
             </div>
             <div class="color-option" tabindex="0" aria-label="Black Steel Rose Shell" role="button">
-                <img src="https://m.media-amazon.com/images/I/71cvwD2dHGL._UL1500_.jpg" alt="Black Steel Rose Shell" />
-            </div>
-            <div class="color-option" tabindex="0" aria-label="Black Steel Black Surface" role="button">
-                <img src="https://m.media-amazon.com/images/I/61mMJO6w6GL._UL1500_.jpg" alt="Black Steel Black Surface" />
+                <img src="https://m.media-amazon.com/images/I/71cvwD2dHGL._UL1500_.jpg" alt="Black" />
             </div>
         </div>
 
