--- a/src/main/resources/pages/dashboard.html
+++ b/src/main/resources/pages/dashboard.html
@@ -254,7 +254,7 @@
 
   <a href="watches/Watch-1.html?id=2" class="card-link">
     <div class="card">
-      <img src="src/main/resources/assets/watches/1/watch 1 - 1.webp" alt="Women's Classic Watch">
+      <img src="src/main/resources/assets/watches/1/test.jpeg" alt="Women's Classic Watch">
       <h4>Women's Classic Watch</h4>
       <div class="price">
         <span class="currency">LKR</span>
