--- a/src/main/resources/pages/dashboard.html
+++ b/src/main/resources/pages/dashboard.html
@@ -252,7 +252,7 @@
     </div>
   </a>
 
-  <a href="watches/Watch-1.html?id=2" class="card-link">
+  <a href="src/main/resources/pages/watches/Watch-2.html?id=2" class="card-link">
     <div class="card">
       <img src="src/main/resources/assets/watches/1/test.jpeg" alt="Women's Classic Watch">
       <h4>Women's Classic Watch</h4>
