--- a/src/main/resources/pages/watches/Watch-1.html
+++ b/src/main/resources/pages/watches/Watch-1.html
@@ -124,15 +124,9 @@
             display: flex;
             align-items: center;
             gap: 15px;
+            color: #c2a563;
         }
-        .price-section .discount {
-            color: #ff6600;
-            font-weight: 700;
-            font-size: 18px;
-            padding: 3px 8px;
-            border: 1.5px solid #ff6600;
-            border-radius: 4px;
-        }
+
         .price-section .original-price {
             color: #888;
             font-size: 18px;
@@ -178,6 +172,10 @@
         .colors {
             display: flex;
             gap: 12px;
+        }
+
+        .color-option:hover{
+            border: 1px solid black;
         }
         .colors .color-option {
             border: 2px solid transparent;
@@ -305,10 +303,10 @@
     <!-- Left thumbnails -->
     <div class="thumbs" id="thumbs">
         <img src="../../assets/watches/1/watch 1 - 1.webp" alt="Watch 1" class="active" />
-        <img src="../../assets/watches/1/test.jpeg" alt="Watch 2" />
-        <img src="../../assets/watches/1/watch 1 - 1.webp" alt="Watch 3" />
-        <img src="../../assets/watches/1/watch 1 - 1.webp" alt="Watch 4" />
-        <img src="../../assets/watches/1/watch 1 - 1.webp" alt="Watch 5" />
+        <img src="../../assets/watches/1/watch 1 - 8.webp" alt="Watch 2" />
+        <img src="../../assets/watches/1/watch 1 - 9.webp" alt="Watch 3" />
+        <img src="../../assets/watches/1/watch 1 - 10.webp" alt="Watch 4" />
+        <img src="../../assets/watches/1/watch 1 - 11.webp" alt="Watch 5" />
     </div>
 
     <!-- Main Image -->
@@ -342,16 +340,19 @@
 
         <div class="colors" id="colors">
             <div class="color-option selected" tabindex="0" aria-label="White Steel Black Surface" role="button">
-                <img src="../../assets/watches/1/watch 1 - 1.webp" alt="Red" />
+                <img src="../../assets/watches/1/watch 1 - 3.webp" alt="Red" />
+            </div>
+            <div class="color-option" tabindex="0" aria-label="White Steel Black Surface" role="button">
+                <img src="../../assets/watches/1/watch 1 - 2.webp" alt="Red" />
             </div>
             <div class="color-option" tabindex="0" aria-label="Blue Steel Blue Surface" role="button">
-                <img src="https://m.media-amazon.com/images/I/71t5LZ8Y8fL._UL1500_.jpg" alt="Blue" />
+                <img src="../../assets/watches/1/watch 1 - 4.webp" alt="Blue" />
             </div>
             <div class="color-option" tabindex="0" aria-label="Golden strap and black dial" role="button">
-                <img src="../../assets/watches/1/test.jpeg" alt="Gold" />
+                <img src="../../assets/watches/1/watch 1 - 5.webp" alt="Gold" />
             </div>
             <div class="color-option" tabindex="0" aria-label="Black Steel Rose Shell" role="button">
-                <img src="https://m.media-amazon.com/images/I/71cvwD2dHGL._UL1500_.jpg" alt="Black" />
+                <img src="../../assets/watches/1/watch 1 - 6.webp" alt="Black" />
             </div>
         </div>
 
